php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31403 php_hostconnect not defined as PHPAPI
Submitted: 2005-01-04 10:01 UTC Modified: 2005-01-04 11:36 UTC
From: alex at tortilla dot ru Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.3.10 OS: Windows
Private report: No CVE-ID: None
 [2005-01-04 10:01 UTC] alex at tortilla dot ru
Description:
------------
php_hostconnect not defined as PHPAPI and some extensions, that are working on unix, get into linking problems on windows.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-01-04 11:36 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Jul 15 23:00:02 2026 UTC