- Fix bug #31403 (php_hostconnect not defined as PHPAPI)